<resources>
    <string name="app_name">Legendary-telegram</string>
    <string name="userNameET">Please Enter Username</string>
    <string name="logIn">Login</string>
    <string name="NewUsr">New User</string>
    <string name="mainReqScrTxt">Relevant Open Requests</string>
    <string name="goToSettings">Edit Profile</string>
    <string name="findRequests">Find Requests</string>
    <string name="makeRequests">Make A Request</string>
    <string name="cancelReq">Cancel Request</string>
    <string name="NameET">Name:</string>
    <string name="pw">Password:</string>
    <string name="confirm">Confirm:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="vehicle">Vehicle?</string>
    <string name="checkIfExists">Check</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_required_toast">Permission required toast</string>
    <string name="permission_rationale_location">Permission rationale location</string>
    <string name="title_activity_description">DescriptionActivity</string>

</resources>
