<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmput301fa16t5.legendary_telegram.MainRequestActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/riderButton"
        android:id="@+id/mainRequestLV"
        android:layout_below="@+id/settingsButton" />

    <Button
        android:text="@string/findRequests"
        android:layout_height="wrap_content"
        android:background="#4285f4"
        android:textColor="#ffffff"
        android:id="@+id/driverButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_width="150dp" />

    <Button
        android:text="@string/makeRequests"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="#8ac337"
        android:textColor="#ffffff"
        android:id="@+id/riderButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:text="@string/mainReqScrTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainRequestTitle"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_alignBaseline="@+id/settingsButton"
        android:layout_alignBottom="@+id/settingsButton"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/goToSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsButton"
        style="@android:style/Widget.Button.Transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/mainRequestTitle" />

</RelativeLayout>
