<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmput301fa16t5.legendary_telegram.userProfile">

    <TextView
        android:text="@string/NameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/nameSettings"
        android:layout_alignBottom="@+id/userNameSettings"
        android:layout_toStartOf="@+id/userNameSettings" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/userNameSettings"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/passwordSetting" />

    <Button
        android:text="@string/checkIfExists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/checkUsrName"
        android:layout_alignBottom="@+id/userNameSettings"
        android:layout_toEndOf="@+id/userNameSettings" />

    <TextView
        android:text="@string/pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameSettings"
        android:layout_alignParentStart="true"
        android:id="@+id/passwordSetting"
        android:layout_alignBottom="@+id/userPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/nameSettings"
        android:id="@+id/userPassword"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/passwordSetting" />

    <TextView
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordSetting"
        android:layout_alignParentStart="true"
        android:id="@+id/confirmSetting"
        android:layout_alignBottom="@+id/userConfirmPassword"
        android:layout_toStartOf="@+id/userPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/passwordSetting"
        android:id="@+id/userConfirmPassword"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/passwordSetting" />

    <TextView
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmSetting"
        android:layout_alignParentStart="true"
        android:id="@+id/phoneSettings"
        android:layout_alignBottom="@+id/userPhone"
        android:layout_toStartOf="@+id/userConfirmPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/confirmSetting"
        android:id="@+id/userPhone"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/confirmSetting"
        android:layout_alignStart="@+id/userConfirmPassword" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneSettings"
        android:layout_alignParentStart="true"
        android:id="@+id/emailSettings"
        android:layout_alignBottom="@+id/userEmail"
        android:layout_toStartOf="@+id/userPhone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/phoneSettings"
        android:id="@+id/userEmail"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/phoneSettings"
        android:layout_alignStart="@+id/userPhone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/emailSettings"
        android:id="@+id/userVehicle"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/emailSettings"
        android:layout_alignStart="@+id/userEmail" />

    <Button
        android:text="@string/editAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/changeSettings" />

    <TextView
        android:text="@string/vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vehicleSetting"
        android:layout_below="@+id/emailSettings"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/userVehicle"
        android:layout_toStartOf="@+id/userEmail" />
</RelativeLayout>
